--- a/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/Ammunition/powercells.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/Ammunition/powercells.yml
@@ -66,7 +66,7 @@
     - map: [ "enum.PowerCellVisualLayers.Base" ]
       state: base
     - map: [ "enum.PowerCellVisualLayers.Unshaded" ]
-      state: laser-mag-unshaded-1
+      state: o2
       shader: unshaded
       visible: false
   - type: Battery
