Звуки воспроизводятся при столкновении вместо приземления

--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -190,7 +190,8 @@
   - type: EmitSoundOnUse
     sound:
       path: /Audio/Items/Toys/mousesqueek.ogg
-  - type: EmitSoundOnLand
+  # SS220 Custom sound effects are played on Collision instead of Land      
+  - type: EmitSoundOnCollide
     sound:
       path: /Audio/Items/Toys/mousesqueek.ogg
   - type: EmitSoundOnActivate
@@ -276,7 +277,8 @@
   - type: EmitSoundOnUse
     sound:
       path: /Audio/Voice/Arachnid/arachnid_laugh.ogg
-  - type: EmitSoundOnLand
+  # SS220 Custom sound effects are played on Collision instead of Land  
+  - type: EmitSoundOnCollide
     sound:
       path: /Audio/Voice/Arachnid/arachnid_laugh.ogg
   - type: EmitSoundOnActivate
@@ -308,9 +310,7 @@
   - type: EmitSoundOnUse
     sound:
       path: /Audio/Items/Toys/weh.ogg
-  - type: EmitSoundOnLand
-    sound:
-      path: /Audio/Items/Toys/weh.ogg
+  # SS220 Custom sound effects are played on Collision instead of Land    
   - type: EmitSoundOnCollide
     sound:
       path: /Audio/Items/Toys/weh.ogg
@@ -382,8 +382,6 @@
   parent: PlushieLizard
   id: PlushieLizardMirrored
   components:
-  - type: Item
-    size: Small
   - type: Sprite
     state: plushie_lizard
     scale: -1, 1
@@ -399,9 +397,7 @@
   - type: EmitSoundOnUse
     sound:
       path: /Audio/Items/Toys/muffled_weh.ogg
-  - type: EmitSoundOnLand
-    sound:
-      path: /Audio/Items/Toys/muffled_weh.ogg
+  # SS220 Custom sound effects are played on Collision instead of Land    
   - type: EmitSoundOnCollide
     sound:
       path: /Audio/Items/Toys/muffled_weh.ogg
@@ -455,9 +451,7 @@
   - type: EmitSoundOnUse
     sound:
       path: /Audio/Items/Toys/hew.ogg
-  - type: EmitSoundOnLand
-    sound:
-      path: /Audio/Items/Toys/hew.ogg
+  # SS220 Custom sound effects are played on Collision instead of Land        
   - type: EmitSoundOnCollide
     sound:
       path: /Audio/Items/Toys/hew.ogg
@@ -512,7 +506,8 @@
     - type: EmitSoundOnUse
       sound:
         path: /Audio/Items/Toys/toy_rustle.ogg
-    - type: EmitSoundOnLand
+    # SS220 Custom sound effects are played on Collision instead of Land    
+    - type: EmitSoundOnCollide
       sound:
         path: /Audio/Items/Toys/toy_rustle.ogg
     - type: EmitSoundOnActivate
@@ -582,7 +577,8 @@
   - type: Sprite
     sprite: Objects/Fun/sharkplush.rsi
     state: blue
-  - type: EmitSoundOnLand
+  # SS220 Custom sound effects are played on Collision instead of Land    
+  - type: EmitSoundOnCollide
     sound:
       path: /Audio/Items/Toys/rawr.ogg
   - type: EmitSoundOnTrigger
@@ -674,7 +670,8 @@
   - type: EmitSoundOnUse
     sound:
       path: /Audio/Effects/bite.ogg
-  - type: EmitSoundOnLand
+  # SS220 Custom sound effects are played on Collision instead of Land    
+  - type: EmitSoundOnCollide
     sound:
       path: /Audio/Effects/bite.ogg
   - type: EmitSoundOnActivate
@@ -841,7 +838,8 @@
   - type: EmitSoundOnUse
     sound:
       path: /Audio/Voice/Vox/shriek1.ogg
-  - type: EmitSoundOnLand
+  # SS220 Custom sound effects are played on Collision instead of Land    
+  - type: EmitSoundOnCollide
     sound:
       path: /Audio/Voice/Vox/shriek1.ogg
   - type: EmitSoundOnTrigger
@@ -878,7 +876,8 @@
   - type: EmitSoundOnUse
     sound:
       path: /Audio/Weapons/Xeno/alien_spitacid.ogg
-  - type: EmitSoundOnLand
+  # SS220 Custom sound effects are played on Collision instead of Land    
+  - type: EmitSoundOnCollide
     sound:
       path: /Audio/Weapons/Xeno/alien_spitacid.ogg
   - type: EmitSoundOnActivate
@@ -915,7 +914,8 @@
   - type: EmitSoundOnUse
     sound:
       path: /Audio/Voice/Human/malescream_1.ogg
-  - type: EmitSoundOnLand
+  # SS220 Custom sound effects are played on Collision instead of Land    
+  - type: EmitSoundOnCollide
     sound:
       path: /Audio/Voice/Human/malescream_2.ogg
   - type: EmitSoundOnActivate
@@ -943,7 +943,8 @@
   - type: EmitSoundOnUse
     sound:
       path: /Audio/Voice/Moth/moth_chitter.ogg
-  - type: EmitSoundOnLand
+  # SS220 Custom sound effects are played on Collision instead of Land    
+  - type: EmitSoundOnCollide
     sound:
       path: /Audio/Voice/Moth/moth_chitter.ogg
   - type: EmitSoundOnActivate
@@ -1757,16 +1758,12 @@
       collection: RubberChicken
       params:
         variation: 0.125
-  - type: EmitSoundOnLand
-    sound:
-      collection: RubberChicken
-      params:
-        variation: 0.125
-  - type: EmitSoundOnActivate
-    sound:
-      collection: RubberChicken
-      params:
-        variation: 0.125
+# SS220 Commented to reduce sound spam
+#  - type: EmitSoundOnActivate
+#    sound:
+#      collection: RubberChicken
+#      params:
+#        variation: 0.125
   - type: EmitSoundOnCollide
     sound:
       collection: RubberChicken
