--- a/Resources/Prototypes/SS220/Entities/Objects/Specific/TarotCards/tarot_cards.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Specific/TarotCards/tarot_cards.yml
@@ -20,7 +20,7 @@
       - TarotTemperanceCard
       - TarotDevilCard
       - TarotTowerCard
-      - TarotStarsCard
+      - TarotStarCard
       - TarotMoonCard
       - TarotSunCard
       - TarotJudgementCard
