--- a/Resources/Prototypes/SS220/Entities/Objects/Specific/TarotCards/tarot_cards.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Specific/TarotCards/tarot_cards.yml
@@ -4,7 +4,7 @@
   name: Enchanted Tarot Card Deck
   components:
   - type: TarotColode
-    cardsName:
+    cardsProtoIds:
       - TarotFoolCard
       - TarotMagicianCard
       - TarotHighPriestessCard
