--- a/Resources/Prototypes/SS220/Loadouts/sponsor_loadout_group.yml
+++ b/Resources/Prototypes/SS220/Loadouts/sponsor_loadout_group.yml
@@ -1,4 +1,7 @@
 # Плащи
+# Требуется соблюдать порядок. Порядок:
+# Плащи для игроков -> Разработчиков -> Администрации и Модерации -> Ст. разработка ->
+# -> Ст. администрация и модерация -> Проект менеджер, Гл. администратор, Банда
 - type: loadoutGroup
   id: SponsorNeck
   name: loadout-group-sponsor-cloak
@@ -11,6 +14,7 @@
   - SpriterNeck
   - TrackerExpertNeck
   - WikiEditorsNeck
+  - MentorNeck
   - AdministratorNeck
   - ModeratorNeck
   - HeadDeveloperNeck
