--- a/Resources/Prototypes/SS220/Loadouts/sponsor_loadouts.yml
+++ b/Resources/Prototypes/SS220/Loadouts/sponsor_loadouts.yml
@@ -54,6 +54,15 @@
     - ClothingSponsorNeckAdministrator
 
 - type: loadout
+  id: MentorNeck
+  effects:
+  - !type:GroupLoadoutEffect
+    proto: MentorSponsorTier
+  storage:
+    back:
+    - ClothingSponsorNeckMentor
+
+- type: loadout
   id: ModeratorNeck
   effects:
   - !type:GroupLoadoutEffect
