--- a/Resources/Prototypes/SS220/Entities/Clothing/Sponsor/base.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Sponsor/base.yml
@@ -213,3 +213,43 @@
     - neck
   - type: Sprite
     state: icon
+
+- type: entity
+  abstract: true
+  parent: [ClothingSponsorNeckBase, BaseFoldable]
+  id: ClothingSponsorNeckMirrorBase
+  components:
+  - type: Appearance
+  - type: Foldable
+    canFoldInsideContainer: true
+    unfoldVerbText: fold-mirror-verb
+    foldVerbText: fold-mirror-verb
+  - type: FoldableClothing
+    foldedEquippedPrefix: mirror
+    foldedHeldPrefix: mirror
+  - type: Sprite
+    layers:
+    - state: icon
+      map: [ "unfoldedLayer" ]
+    - state: icon_mirror
+      map: ["foldedLayer"]
+      visible: false
+
+- type: entity
+  abstract: true
+  parent: ClothingSponsorNeckMirrorBase
+  id: ClothingSponsorNeckMirroredBase
+  suffix: Отзеркаленный, Шлёпа
+  components:
+  - type: Foldable
+    folded: true
+  - type: Clothing
+    equippedPrefix: mirror
+  - type: Sprite
+    layers:
+    - state: icon
+      map: [ "unfoldedLayer" ]
+      visible: false
+    - state: icon_mirror
+      map: ["foldedLayer"]
+      visible: true
