--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -991,7 +991,7 @@
       - !type:HealthChange
         damage:
           types:
-            Slash: -1.8
+            Slash: -1.8 #ss220 combat medicine be-gone
       - !type:HealthChange
         conditions:
         - !type:ReagentThreshold
@@ -1040,7 +1040,7 @@
       - !type:HealthChange
         damage:
           types:
-            Blunt: -1.8
+            Blunt: -1.8 #ss220 combat medicine be-gone
       - !type:HealthChange
         conditions:
         - !type:ReagentThreshold
