--- a/Resources/Prototypes/SS220/Entities/Clothing/Neck/base_clothingneck.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Neck/base_clothingneck.yml
@@ -29,6 +29,8 @@
     folded: true
   - type: Clothing
     equippedPrefix: mirror
+  - type: Item
+    heldPrefix: mirror
   - type: Sprite
     layers:
     - state: icon
