--- a/Resources/Prototypes/SS220/Entities/Clothing/Sponsor/base.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Sponsor/base.yml
@@ -245,6 +245,8 @@
     folded: true
   - type: Clothing
     equippedPrefix: mirror
+  - type: Item
+    heldPrefix: mirror
   - type: Sprite
     layers:
     - state: icon
