--- a/Resources/Prototypes/SS220/Entities/Clothing/Sponsor/base.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Sponsor/base.yml
@@ -217,41 +217,41 @@
 - type: entity
   abstract: true
   parent: [ClothingSponsorNeckBase, BaseFoldable]
-  id: ClothingSponsorNeckMirrorBase
+  id: ClothingSponsorNeckOtherShoulderBase
   components:
   - type: Appearance
   - type: Foldable
     canFoldInsideContainer: true
-    unfoldVerbText: fold-mirror-verb
-    foldVerbText: fold-mirror-verb
+    unfoldVerbText: fold-other-shoulder-verb
+    foldVerbText: fold-other-shoulder-verb
   - type: FoldableClothing
-    foldedEquippedPrefix: mirror
-    foldedHeldPrefix: mirror
+    foldedEquippedPrefix: other-shoulder
+    foldedHeldPrefix: other-shoulder
   - type: Sprite
     layers:
     - state: icon
       map: [ "unfoldedLayer" ]
-    - state: icon_mirror
+    - state: icon_other-shoulder
       map: ["foldedLayer"]
       visible: false
 
 - type: entity
   abstract: true
-  parent: ClothingSponsorNeckMirrorBase
-  id: ClothingSponsorNeckMirroredBase
+  parent: ClothingSponsorNeckOtherShoulderBase
+  id: ClothingSponsorNeckOtherShoulderedBase
   suffix: Отзеркаленный, Шлёпа
   components:
   - type: Foldable
     folded: true
   - type: Clothing
-    equippedPrefix: mirror
+    equippedPrefix: other-shoulder
   - type: Item
-    heldPrefix: mirror
+    heldPrefix: other-shoulder
   - type: Sprite
     layers:
     - state: icon
       map: [ "unfoldedLayer" ]
       visible: false
-    - state: icon_mirror
+    - state: icon_other-shoulder
       map: ["foldedLayer"]
       visible: true
