--- a/Resources/Prototypes/SS220/Mobs/PetParrots.yml
+++ b/Resources/Prototypes/SS220/Mobs/PetParrots.yml
@@ -24,6 +24,11 @@
   components:
   - type: InteractionPopup
     successChance: 1
+  - type: Language
+    availableLanguages:
+    - id: Galactic
+    - id: SolCommon
+      canSpeak: false
   - type: Grammar
     attributes:
       proper: true
