localized dataset fix + emoting added

--- a/Resources/Prototypes/Entities/Mobs/NPCs/space.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/space.yml
@@ -111,6 +111,7 @@
     interactSuccessSound:
       path: /Audio/Animals/sloth_squeak.ogg
   #SS220 Goal start
+  - type: Emoting
   - type: ActionGrant
     actions:
     - ActionGoal
