--- a/Resources/Prototypes/SS220/Datasets/tarot_cards.yml
+++ b/Resources/Prototypes/SS220/Datasets/tarot_cards.yml
@@ -10,3 +10,19 @@
   values:
   - BlockGameArcade
   - SpaceVillainArcadeFilled
+
+- type: dataset
+  id: RandomMessageToChat
+  values:
+  - ";СБ, убивают!"
+  - ";ЯО в прибытии!"
+  - ";Украли карту капитана"
+  - ";Человек с чайной в отбытии!"
+  - ";Убивают в дормах!"
+  - ";Проникновение в каюту капитана"
+  - ";Украли гипоспрей"
+  - ";Давай сюда 5 тк"
+  - ";У меня дабла и ноуслипы"
+  - ";ЯО мед"
+  - ";Техи меда убивают, помощи"
+  - ";Помогите"
