--- a/Resources/Prototypes/Roles/Jobs/Command/blue_shield.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/blue_shield.yml
@@ -43,6 +43,7 @@
   - Cargo
   - Medical
   - Blueshield
+  - Explorer #SS220 Explorer
   special:
   - !type:AddImplantSpecial
     implants: [ MindShieldImplant ]
