--- a/Resources/Prototypes/Roles/Jobs/Science/research_director.yml
+++ b/Resources/Prototypes/Roles/Jobs/Science/research_director.yml
@@ -25,6 +25,7 @@
   - ResearchDirector
   - Brig
   - Cryogenics
+  - Explorer #SS220 Explorer
   special:
   - !type:AddComponentSpecial
     components:
