--- a/Resources/Prototypes/SS220/Access/law.yml
+++ b/Resources/Prototypes/SS220/Access/law.yml
@@ -8,3 +8,8 @@
   tags:
   - Magistrate
   - Lawyer
+
+- type: accessLevel
+  id: Explorer
+  name: id-card-access-level-explorer
+  canBeSwitchableInReader: false
