--- a/Resources/Prototypes/SS220/Entities/Debugging/access_configurator_debug.yml
+++ b/Resources/Prototypes/SS220/Entities/Debugging/access_configurator_debug.yml
@@ -48,6 +48,7 @@
       - SyndicateAgent
       - Theatre
       - Magistrate
+      - Explorer #SS220 Explorer
       #New centcomm accesses begin
       - CentralCommand
       - CentralCommandCBURN
