--- a/Resources/Prototypes/Roles/Jobs/Command/head_of_personnel.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/head_of_personnel.yml
@@ -47,6 +47,7 @@
   - Cargo
   - Atmospherics
   - Medical
+  - Explorer #SS220 Explorer
   special:
   - !type:AddComponentSpecial
     components:
