--- a/Resources/Prototypes/SS220/Entities/Debugging/id_card_debug.yml
+++ b/Resources/Prototypes/SS220/Entities/Debugging/id_card_debug.yml
@@ -49,6 +49,7 @@
       - SyndicateAgent
       - Theatre
       - Magistrate
+      - Explorer #SS220 Explorer
       #New centcomm accesses begin
       - CentralCommand
       - CentralCommandCBURN
