More npc lang fix

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/cake.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/cake.yml
@@ -702,6 +702,12 @@
   - type: FlavorProfile
     flavors:
     - sweet
+#SS220 languages tweaks begin
+  - type: Language
+    availableLanguages:
+    - id: Galactic
+      canSpeak: true
+#SS220 languages tweaks end
   - type: InjectableSolution
     solution: food
   - type: RefillableSolution
