add high priestess

--- a/Resources/Prototypes/SS220/Datasets/tarot_cards.yml
+++ b/Resources/Prototypes/SS220/Datasets/tarot_cards.yml
@@ -26,3 +26,18 @@
   - ";ЯО мед"
   - ";Техи меда убивают, помощи"
   - ";Помогите"
+
+- type: dataset
+  id: RandomAnomalyInjectorsSpawn
+  values:
+  - AnomalyTrapPyroclastic
+  - AnomalyTrapElectricity
+  - AnomalyTrapShadow
+  - AnomalyTrapIce
+  - AnomalyTrapFlora
+  - AnomalyTrapBluespace
+  - AnomalyTrapFlesh
+  - AnomalyTrapGravity
+  - AnomalyTrapTech
+  - AnomalyTrapRock
+  - AnomalyTrapSanta
