--- a/Resources/Prototypes/SS220/Entities/Clothing/Masks/masks.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Masks/masks.yml
@@ -128,6 +128,22 @@
    - type: IngestionBlocker
    - type: IdentityBlocker
 
+- type: entity
+  parent: [ClothingMaskGas]
+  id: ClothingMaskGasExplorerAlt
+  name: explorer gas mask
+  description: Ergonomic gas mask for extreme tasks.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Mask/gasexplorer.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Mask/gasexplorer.rsi
+  - type: Armor
+    modifiers:
+      coefficients:
+        Piercing: 0.95
+        Heat: 0.9
+
 # Syndie PAYDAY MASKS
 
 - type: entity
