--- a/Resources/Prototypes/SS220/Entities/Objects/Devices/Electronics/door_access.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Devices/Electronics/door_access.yml
@@ -48,3 +48,11 @@
   components:
   - type: AccessReader
     access: [["Magistrate"]]
+
+- type: entity
+  parent: DoorElectronics
+  id: DoorElectronicsExplorer
+  suffix: Explorer, Locked
+  components:
+  - type: AccessReader
+    access: [["Explorer"]]
