--- a/Resources/Prototypes/SS220/Roles/Jobs/Science/explorer.yml
+++ b/Resources/Prototypes/SS220/Roles/Jobs/Science/explorer.yml
@@ -16,7 +16,7 @@
   - Explorer
   - Maintenance
   - Cargo
-  - Salvage
+#  - Salvage По идеи, им он не нужнен ?...
   - Maintenance
   - External
 
@@ -24,4 +24,3 @@
   id: ExplorerGear
   equipment:
     id: ExplorerPDA
-    ears: ClothingHeadsetScience
