--- a/Resources/Prototypes/SS220/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/SS220/Entities/Mobs/NPCs/pets.yml
@@ -7,7 +7,7 @@
   - type: Language
     availableLanguages:
     - id: Galactic
-      canspeak: false
+      canSpeak: false
   - type: GhostRole
     makeSentient: true
     allowSpeech: true
