Fix skill issue

--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -3013,7 +3013,7 @@
   - type: Language
     availableLanguages:
     - id: Galactic
-      canspeak: false
+      canSpeak: false
 #SS220 languages tweaks end
   - type: DamageStateVisuals
     states:
