Добавлен общегалактический язык ботам

--- a/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
@@ -217,6 +217,11 @@
       path: /Audio/Items/bikehorn.ogg
       params:
         variation: 0.125
+#SS220 Languages tweaks begin
+  - type: Language
+    availableLanguages:
+    - id: Galactic
+      canSpeak: true
 
 - type: entity
   parent: MobHonkBot
@@ -258,6 +263,11 @@
     totalIntensity: 10
     intensitySlope: 5
     canCreateVacuum: false
+#SS220 Languages tweaks begin
+  - type: Language
+    availableLanguages:
+    - id: Galactic
+      canSpeak: true
 
 - type: entity
   parent: MobSiliconBase
@@ -386,6 +396,11 @@
     interactFailureString: petting-failure-mimebot
   - type: Inventory
     templateId: head
+#SS220 Languages tweaks begin
+  - type: Language
+    availableLanguages:
+    - id: Galactic
+      canSpeak: false
 
 - type: entity
   parent: MobSiliconBase
@@ -453,3 +468,8 @@
     channels:
     - Common
     - Supply
+#SS220 Languages tweaks begin
+  - type: Language
+    availableLanguages:
+    - id: Galactic
+      canSpeak: true
