--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -998,7 +998,7 @@
           min: 12
         damage:
           types:
-            Cold: 0.7
+            Cold: 0.7 #ss220 med-fix
 
 - type: reagent
   id: Puncturase
@@ -1023,7 +1023,7 @@
           min: 11
         damage:
           types:
-            Blunt: 0.9
+            Blunt: 0.9 #ss220 med-fix
 
 - type: reagent
   id: Bruizine
@@ -1047,7 +1047,7 @@
           min: 10.5
         damage:
           types:
-            Poison: 0.7
+            Poison: 0.7 #ss220 med-fix
 
 - type: reagent
   id: Holywater
