--- a/Resources/Maps/SS220/ss220-nukeoutpost.yml
+++ b/Resources/Maps/SS220/ss220-nukeoutpost.yml
@@ -3208,7 +3208,6 @@ entities:
     - type: MetaData
     - type: Transform
     - type: Map
-      mapPaused: True
     - type: PhysicsMap
     - type: GridTree
     - type: MovedGrids
@@ -8636,6 +8635,8 @@ entities:
     - EnergySword
     - ItemToggleSize
     - UseDelay
+    - Blocking
+    - Reflect
 - proto: ExpensiveLighterSyndicate
   entities:
   - uid: 1175
