--- a/Resources/Prototypes/Entities/Mobs/Species/dwarf.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/dwarf.yml
@@ -83,6 +83,13 @@
   - type: Emoting
     chatEmoteCooldown: 5.0
   #ss220 emote 5 sec end
+  #SS220 LimitationRevive - start
+  - type: LimitationRevive
+    typeDamageOnDead:
+      types:
+        Сerebral: 400
+  #SS220 LimitationRevive - end
+
 
 - type: entity
   parent: BaseSpeciesDummy
