--- a/Resources/Prototypes/Damage/groups.yml
+++ b/Resources/Prototypes/Damage/groups.yml
@@ -40,6 +40,7 @@
   name: damage-group-genetic
   damageTypes:
     - Cellular
+    - Сerebral #SS220 LimitationRevive
 
 # Metaphysical damage types should be used very sparingly, and likely not affect normal crew entities.
 # Revenants and other ghost-like/demonic creatures are more fitting. Healing should never be available via medicine.
