--- a/Resources/Prototypes/SS220/Catalog/Fills/Boxes/general.yml
+++ b/Resources/Prototypes/SS220/Catalog/Fills/Boxes/general.yml
@@ -7,3 +7,13 @@
     contents:
       - id: EncryptionKeyLaw
         amount: 4
+
+- type: entity
+  id: BoxDnaCopyImplant
+  parent: BoxCardboard
+  components:
+  - type: StorageFill
+    contents:
+    - id: PenDnaScrambler
+    - id: DnaCopyImplanter
+    - id: PaperDnaCopyImplanter
