--- a/Resources/Prototypes/SS220/Catalog/Fills/Paper/manuals.yml
+++ b/Resources/Prototypes/SS220/Catalog/Fills/Paper/manuals.yml
@@ -18,3 +18,10 @@
     contentImageModulate: "#cccccc"
     backgroundPatchMargin: 16.0, 16.0, 16.0, 16.0
     contentMargin: 16.0, 16.0, 16.0, 16.0
+
+- type: entity
+  id: PaperDnaCopyImplanter
+  parent: Paper
+  components:
+  - type: Paper
+    content: book-text-identity-implant-info
